--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="/janachetanapackersandmovers/assets/lib/owlcarousel/owl.carousel.min.css" rel="stylesheet">
     <link href="/janachetanapackersandmovers/assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="/janachetanapackersandmovers/assets/css/style.css" rel="stylesheet">
-    <script defer="defer" src="/static/js/main.fad1f209.js"></script>
+    <script defer="defer" src="/janachetanapackersandmovers/static/js/main.fad1f209.js"></script>
     <link href="/janachetanapackersandmovers/static/css/main.6258c0be.css" rel="stylesheet">
 </head>
 
@@ -34,5 +34,6 @@
     <script src="/janachetanapackersandmovers/assets/lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="/janachetanapackersandmovers/assets/js/main.js"></script>
 </body>
+
 
 </html>
